# vibestack

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  install.sh
docs/: ARCHITECTURE.md  EVOLUTION.md  HARNESS-GUIDE.md
roastmymvp/: .ai-beta-test.yaml  .gitignore  ARCHITECTURE.md  CLAUDE.md  PRD.md  PROGRESS.md  README.md  pyproject.toml
roastmymvp/roastmymvp/: cli.py  config.py  gauntlet.py
roastmymvp/roastmymvp/browser/: explorer.py  interaction_log.py  mobile_tester.py  models.py  performance.py  screenshotter.py
roastmymvp/roastmymvp/context/: builder.py
roastmymvp/roastmymvp/evolution/: apply.py  feedback.py  genes.py
roastmymvp/roastmymvp/founder/: models.py  scraper.py
roastmymvp/roastmymvp/llm/: client.py  models.py  prompts.py
roastmymvp/roastmymvp/personas/: depth_analyst.py  generator.py  irrationality.py  models.py  template_loader.py
roastmymvp/roastmymvp/personas/templates/: ecommerce.yaml  education.yaml  game.yaml  saas.yaml
roastmymvp/roastmymvp/report/: builder.py  stats.py
roastmymvp/roastmymvp/research/: models.py  persona_enricher.py  persona_factory.py  scraper.py
roastmymvp/roastmymvp/vc/: analyst.py  models.py  personas.py  prompts.py  report.py
roastmymvp/standards/: coding-style.md
roastmymvp/tests/: test_browser_models.py  test_cli.py  test_context_builder.py  test_depth_analyst.py  test_e2e.py  test_explorer.py  test_interaction_log.py  test_llm.py  test_mobile_tester.py  test_personas.py  test_report.py  test_research.py  test_screenshotter.py  test_vc.py
skills/roast-mvp/: SKILL.md
skills/validate-idea/: SKILL.md
(+5 files in other folders)
